Small bug fixes. Layout for Datasets changed.

--- a/NetExplorer/templates/NetExplorer/datasets.html
+++ b/NetExplorer/templates/NetExplorer/datasets.html
@@ -29,7 +29,7 @@
 
     <!-- TRANSCRIPTOMES DIVS -->
     {% for db in databases %}
-        <div class="panel panel-default">
+        <div class="panel panel-default panel-transcriptome">
             <div class="panel-heading">
                 <a class="about-title" name="{{ db.name }}">
                     <h4><img class='legend-db' src="{% static 'Images/legend-' %}{{ db.name }}.png"/>{{ db }}</h4>
@@ -37,7 +37,7 @@
             </div>
             <div class="panel-body transcriptome-panel">
                 <div class="row row-eq-height transcriptome-row">
-                    <div class="col-sm-5 transcriptome-col">
+                    <div class="col-sm-6 col-xs-12 transcriptome-col">
                         <div class="transcriptome-table-div">
                             <table class="table table-hover transcriptome-table">
                                 <thead>
@@ -46,11 +46,11 @@
                                 <thead>
                                 <tbody>
                                     <tr>
-                                        <td class="text-right"><strong>Year</strong></td> <td>{{ db.year }}</td>
+                                        <td class="text-right"><strong>Publication</strong></td> 
+                                        <td> <a href="{{ db.url }}" target="_blank"> {{ db.citation|safe }} </a> </td>
                                     </tr>
                                     <tr>
-                                        <td class="text-right"><strong>Publication</strong></td> 
-                                        <td> <a href="{{ db.url }}" target="_blank"> {{ db.citation }} </a> </td>
+                                        <td class="text-right"><strong>Year</strong></td> <td>{{ db.year }}</td>
                                     </tr>
                                     <tr>
                                         <td class="text-right"><strong>Number of contigs</strong></td> <td>{{ db.n_contigs }}</td>
@@ -62,8 +62,7 @@
                             </table>
                         </div>
                     </div>
-
-                    <div class="col-sm-7 transcriptome-col">
+                    <div class="col-sm-6 col-xs-12 transcriptome-col">
                         <div class="row plot-btns">
                             <div class="col-sm-6 btn btn-default" data-id="{{ db.name }}"  name="prev">Prev</div>
                             <div class="col-sm-6 btn btn-default" data-id="{{ db.name }}" name="next">Next</div>
