--- a/NetExplorer/static/css/style.css
+++ b/NetExplorer/static/css/style.css
@@ -1230,7 +1230,7 @@ input[type="file"] {
 }
 
 .about-button-container {
-    top: 100px !important;
+    top: 30px !important;
 }
 
 .about-overlay-close {
@@ -1238,10 +1238,10 @@ input[type="file"] {
 }
 
 .about-overlay {
-    width: 1000px;
-    height: 800px;
-    top: 100px;
-    right: 18%;
+    height: 90%;
+    width: 54%;
+    top: 30px;
+    right: 28%;
 }
 
 .transcriptome-table-div {
@@ -1258,6 +1258,14 @@ input[type="file"] {
 }
 .transcriptome-row .col-sm-5 { /* transcriptome table column */
     text-align: center;
+}
+
+@media only screen and (max-width: 780px) {
+    .panel-transcriptome {
+        max-height: 600px;
+        padding-top: 50px;
+    }
+
 }
 
 .img-bigger {
@@ -1280,8 +1288,8 @@ input[type="file"] {
 
 .plot-img-png {
     position: relative;
-    height: 95%;
-    width: 40%;
+    height: 100%;
+    width: 100%;
 }
 
 .view-interactome-plots:hover {
@@ -1294,9 +1302,10 @@ input[type="file"] {
 }
 
 .plot-viewer {
+    display: inline-block;
     position: relative;
-    width: 100%;
-    height: 80%;
+    width: 320px;
+    height: 320px;
 }
 
 .transcriptome-row .col-sm-7 {
@@ -1317,6 +1326,7 @@ input[type="file"] {
 }
 .transcriptome-col {
     height: 400px !important;
+    text-align: center;
 }
 
 .transcriptome-row {
@@ -1651,6 +1661,7 @@ input[type="file"] {
 
 .tutorial-img {
     margin-bottom: 15px;
+    width: 100%;
     max-width: 720px;
 }
 
