--- a/NetExplorer/templates/NetExplorer/about.html
+++ b/NetExplorer/templates/NetExplorer/about.html
@@ -18,9 +18,9 @@
     </p>
 
     <br>
+    <br>
+    <h2>Citing PlanNET</h2>
     <hr>
-    <h3>Citing PlanNET</h3>
-
     <blockquote>
       <p>
         <a href="https://academic.oup.com/bioinformatics/article/34/6/1016/4657068" target="_blank"><b>PlanNET</b>: homology-based predicted interactome for multiple planarian transcriptomes</a>
@@ -28,30 +28,30 @@
         S. Castillo-Lara, J.F. Abril<br />
         <i>Bioinformatics</i>, Volume 34, Issue 6, 15 March 2018, Pages 1016–1023, <a href="https://doi.org/10.1093/bioinformatics/btx738" target="_blank">btx738</a><br />
       </p>
-    </blockquote>
-
-    <ul>
-        <li>BibTex:</li>
-    </ul>
-    <pre>
-        @article{Castillo-Lara2018,
-            author = {Castillo-Lara, S and Abril, J F},
-            title = {"PlanNET: homology-based predicted interactome for multiple planarian transcriptomes"},
-            journal = {Bioinformatics},
-            volume = {34},
-            number = {6},
-            pages = {1016--1023},
-            year = {2018},
-            doi = {10.1093/bioinformatics/btx738},
-            URL = {http://dx.doi.org/10.1093/bioinformatics/btx738},
-            eprint = {/oup/backfile/content_public/journal/bioinformatics/34/6/10.1093_bioinformatics_btx738/2/btx738.pdf}
-        }
-    </pre>
+      <details>
+          <summary>BibTex</summary>
+          <pre>
+    @article{Castillo-Lara2018,
+      author = {Castillo-Lara, S and Abril, J F},
+      title = {"PlanNET: homology-based predicted interactome for multiple planarian transcriptomes"},
+      journal = {Bioinformatics},
+      volume = {34},
+      number = {6},
+      pages = {1016--1023},
+      year = {2018},
+      doi = {10.1093/bioinformatics/btx738},
+      URL = {http://dx.doi.org/10.1093/bioinformatics/btx738},
+      eprint = {/oup/backfile/content_public/journal/bioinformatics/34/6/10.1093_bioinformatics_btx738/2/btx738.pdf}
+    }
+        </pre>
+    </details>
+</blockquote>
 
     <br>
+    <br>
+    <h2 id="update-notes">Update Notes</h2>
     <hr>
-    <h3 id="update-notes">1.1 Update Notes</h3>
-    <h4>August 7th 2018</h4>
+    <h3>v1.1: August 7th 2018</h3>
     PlanNET has been updated from version 1.0 (published version at <a href="https://academic.oup.com/bioinformatics/article/34/6/1016/4657068" target="_blank">Bioinformatics</a>) to version 1.1.
 
     These are the most important changes:
