--- a/NetExplorer/static/css/style.css
+++ b/NetExplorer/static/css/style.css
@@ -1938,3 +1938,53 @@ kbd {
 .idtextarea {
     max-width: 600px;
 }
+
+
+/* PLANEXP */
+.planexp-h1 {
+    font-size: 22px;
+}
+
+.planexp-rule {
+    border-width: 4px;
+    border-color: #FDD4D4;
+    margin-top: 8px;
+}
+
+.planexp-card {
+    border: 4px solid #f4f4f4;
+    padding: 22px;
+}
+
+#planexp-summary { display: none; }
+#planexp-citation { width: 100%; min-height: 80px; }
+#planexp-description { min-height: 80px; }
+#planexp-conditions  { min-height: 80px; }
+
+#planexp-experiment-type { 
+    display: inline-block;
+    text-align: center;
+    width: 120px;
+    margin-left: 20px;
+    padding: 8px;
+    border-radius: 5px;
+    background-color: #f4f4f4;
+}
+
+#RNA-Seq { display: none; }
+#Single-Cell { display: none; }
+
+.cond-type {
+    display: inline-block;
+    font-weight: bold;
+    background-color:  #f4f4f4;
+    width: auto;
+    padding: 4px;
+    margin-left: 10px;
+    margin-bottom: 10px;
+}
+.cond-name {
+    display: block;
+    margin-left: 20px;
+    margin-bottom: 10px;
+}
