--- a/NetExplorer/templates/NetExplorer/planexp.html
+++ b/NetExplorer/templates/NetExplorer/planexp.html
@@ -78,6 +78,17 @@
                 </div>
                 <div id="planexp-dge-table">
                 </div>
+            </div> <!-- Differential expression table -->
+
+            <div id="planexp-gene-expression" class="planexp-card">
+                <h2 id="planexp-title">Gene Expression</h2>
+                <hr class="planexp-rule">
+                <div class="input-group gene-expression-search-container">
+                    <input type="text" id="gene-expression-search" class="form-control" name="genesymbol" placeholder="Enter Gene Symbol">
+                    <span class="input-group-btn">
+                        <button type="submit" value=" Send" class="btn btn-danger" id="submit">Plot expression</button>
+                    </span>
+                </div>
             </div>
             
         </div> <!-- Planexp panel body div -->
