--- a/NetExplorer/static/css/style.css
+++ b/NetExplorer/static/css/style.css
@@ -2004,3 +2004,14 @@ kbd {
 #select-dataset { display: none; }
 #planexp-gene-expression { display: none; }
 .gene-expression-search-container { width: 50%; }
+#expression-plot-container { 
+    width: 100%; 
+    margin-top: 50px;
+    text-align: center; 
+}
+#expression-plot { 
+    display: inline-block; 
+    height: 500px; 
+    min-width: 500px; 
+    background-color: #f4f4f4; 
+}
