--- a/NetExplorer/templates/NetExplorer/planexp.html
+++ b/NetExplorer/templates/NetExplorer/planexp.html
@@ -91,7 +91,12 @@
                 </div>
 
                 <div id="expression-plot-container">
-                    <div id="expression-plot"></div>
+                    <div id="plot-genenotfound">
+                        <span class="glyphicon glyphicon-warning-sign"></span>
+                        Gene/Symbol not found
+                    </div>
+                    <div id="expression-plot">
+                    </div>
                 </div>
             </div>
             
