Plotting multiple genes (barplot)

--- a/NetExplorer/templates/NetExplorer/planexp.html
+++ b/NetExplorer/templates/NetExplorer/planexp.html
@@ -84,7 +84,7 @@
                 <h2 id="planexp-title">Gene Expression</h2>
                 <hr class="planexp-rule">
                 <div class="input-group gene-expression-search-container">
-                    <input type="text" id="gene-expression-search" class="form-control" name="genesymbol" placeholder="Enter Gene Symbol">
+                    <input type="text" id="gene-expression-search" class="form-control" name="genesymbol" placeholder="Enter Gene Symbols">
                     <span class="input-group-btn">
                         <button id="plot-expression-btn" type="submit" value=" Send" class="btn btn-danger" id="submit">Plot expression</button>
                     </span>
