Small fixes for first SC experiment tests.

--- a/NetExplorer/templates/NetExplorer/experiment_summary.html
+++ b/NetExplorer/templates/NetExplorer/experiment_summary.html
@@ -1,5 +1,5 @@
 {% load staticfiles %} 
-<h2 id="planexp-title">{{ experiment.name }}</h2>
+<h2 id="planexp-title">Summary - {{ experiment.name }}</h2>
 <hr class="planexp-rule">
 
 <div class="row">
