Checking if Gexp plot is empty before drawing it.

--- a/NetExplorer/templates/NetExplorer/planexp.html
+++ b/NetExplorer/templates/NetExplorer/planexp.html
@@ -67,6 +67,10 @@
                 <h2 id="planexp-title">Differentially expressed genes</h2>
                 <hr class="planexp-rule">
                 <div class="form-group planexp-condition-selects">
+                    <h4>Conditions:</h4>
+                    <select id="planexp-dge-ctype" name="planexp-dge-ctype" class="selectpicker ctype-select" title="Select Condition Type">
+                    </select>
+                    <hr>
                     <h4>Select conditions to compare</h4>
                     <select id="planexp-dge-c1" name="condition1" class="selectpicker condition-select dge-table-condition-selects" title="Select Condition">
                         <option value="" disabled selected>Select condition</option>
