--- a/NetExplorer/templates/NetExplorer/planexp.html
+++ b/NetExplorer/templates/NetExplorer/planexp.html
@@ -84,6 +84,7 @@
                 </div>
             </div> <!-- Differential expression table -->
 
+            <!-- Gene Expression Plot-->
             <div id="planexp-gene-expression" class="planexp-card">
                 <h2 id="planexp-title">Gene Expression</h2>
                 <hr class="planexp-rule">
@@ -101,7 +102,7 @@
                 </select>
 
                 <br>
-                <div id="expression-plot-container">
+                <div id="plot-container">
                     <div id="plot-genenotfound">
                         <span class="glyphicon glyphicon-warning-sign"></span>
                         Gene/Symbol not found
@@ -112,7 +113,59 @@
                     <div id="expression-plot">
                     </div>
                 </div>
-            </div>
+            </div> <!-- Gene Expression Plot -->
+
+
+            <!-- tSNE plot -->
+            <div id="planexp-tsne" class="planexp-card">
+                <h2 id="planexp-title">t-SNE plot</h2>
+                <hr class="planexp-rule">
+
+                <h4>Color By:</h4>
+                <!-- Condition-vs-GeneSymbol tab header -->
+                <ul class="nav nav-tabs">
+                    <li class="active"><a data-toggle="tab" href="#tsne-conditions-tab">Conditions</a></li>
+                    <li><a data-toggle="tab" href="#tsne-gene-tab">Gene Symbol</a></li>
+                </ul>
+                  
+
+                <div class="tab-content">
+                    <!-- Condition tab -->
+                    <div id="tsne-conditions-tab" class="tab-pane fade in active">
+                        <label for="tsne-ctype">Conditions:</label><br>
+                        <select id="tsne-ctype" name="tsne-ctype" class="selectpicker ctype-select" title="Select Condition Type">
+                            <option value="Experimental" selected>Experimental</option>
+                        </select>
+                    </div>
+
+                    <!-- Gene Symbol tab -->
+                    <div id="tsne-gene-tab" class="tab-pane fade">
+                        <div class="input-group gene-expression-search-container">
+                            <label for="genesymbol">Gene Symbol/s:</label>
+                            <input type="text" id="tsne-search" class="form-control" name="genesymbol" placeholder="Enter Gene Symbols">
+                        </div>
+                    </div>
+                </div>
+                <br>
+                <span class="input-group-btn input-grp-withlabel">
+                    <button id="plot-tsne-btn" type="submit" value=" Send" class="btn btn-danger" id="submit">Plot tSNE</button>
+                </span>
+
+                
+                <br>
+                <div id="plot-container">
+                    <div id="tsneplot-genenotfound">
+                        <span class="glyphicon glyphicon-warning-sign"></span>
+                        Gene/Symbol not found
+                    </div>
+                    <div id="tsne-plot-loading">
+                        <img class="planexp-loading-img" src="{% static 'Images/loading-planexp.gif' %}"/>
+                    </div>
+                    <div id="tsne-plot">
+                    </div>
+                </div>
+
+            </div> <!-- tSNE plot-->
             
         </div> <!-- Planexp panel body div -->
     </div><!-- Planexp panel div -->
