Handling comparison not available for DGE table.

--- a/NetExplorer/templates/NetExplorer/planexp.html
+++ b/NetExplorer/templates/NetExplorer/planexp.html
@@ -80,6 +80,10 @@
                     </select>
                     
                 </div>
+                <div id="dge-table-notfound">
+                    <span class="glyphicon glyphicon-warning-sign"></span>
+                    Condition comparison not available.
+                </div>
                 <div id="planexp-dge-table">
                 </div>
             </div> <!-- Differential expression table -->
