--- a/NetExplorer/static/css/style.css
+++ b/NetExplorer/static/css/style.css
@@ -2041,6 +2041,15 @@ kbd {
     background-color: #FDD4D4;  
 }
 
+#dge-table-notfound {
+    display: none; 
+    margin: auto;
+    font-size: 18px;
+    padding: 8px;
+    width: 700px; 
+    background-color: #FDD4D4;  
+}
+
 #expression-plot-loading {
     display: none;
     position: absolute;
