--- a/NetExplorer/static/css/style.css
+++ b/NetExplorer/static/css/style.css
@@ -2082,3 +2082,42 @@ kbd {
 }
 
 #plot-tsne-btn    { width: 125px; }
+
+#planexp-toc {
+    padding: 8px;
+    background-color: white;
+    border: 4px solid #E7E7E7;
+    width: 12%;
+    min-width: 150px;
+    min-height: 400px;
+    z-index: 2;
+}
+
+#planexp-toc.affix-top {
+    width: 100%;
+}
+
+#planexp-toc-container {
+    z-index: 2;
+    width: 12%;
+    padding:0px;
+    margin-top: calc(9% + 245px);
+}
+
+#logo-container .col-sm-8 {
+    height: 195px;
+}
+
+#logo-container .col-sm-4 {
+    height: 195px;
+}
+
+
+#planexp-summary-toc { display: none; }
+#planexp-dge-table-container-toc { display: none; }
+#planexp-gene-expression-toc     { display: none; }
+#planexp-tsne-toc { display: none; }
+
+.planexp-toc-link {
+    width: 100% !important;
+}
